fix alignment

--- a/_sass/_find-your-place.scss
+++ b/_sass/_find-your-place.scss
@@ -725,6 +725,9 @@ a:hover {
         margin: 1em 0 0 0;
       }
     }
+    .two-col-card.heading-card {
+      justify-content: center;
+    }
   }  
 }
 
